# phasm

./: Cargo.toml  README.md
dentist_booking/: Cargo.toml  README.md  SIMULATION_TESTING.md
dentist_booking/examples/: simple.rs
dentist_booking/src/: lib.rs  types.rs
dentist_booking/tests/: integration.rs  simulation.rs
docs/: 01_core_concepts.md  02_invariants.md  03_performance.md  04_testing.md  05_database_state.md  README.md
examples/: coffee_shop.rs  csm.rs
src/: actions.rs  lib.rs
