[package]
name = "phasm"
version = "0.2.0"
edition = "2024"
authors = ["Azz <zk2u@pm.me>"]
description = "Phallible Async State Machines"
repository = "https://github.com/zk2u/phasm"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
monoio = "0.2.4"

[workspace]
resolver = "3"
members = ["dentist_booking"]
